# fk

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
fk-compute/: .readthedocs.yaml  CHANGES.md  CMakeLists.txt  ImproveSignDiagramSearch-Davide.nb  MEMORY_OPTIMIZATION_STATUS.md  README.md  compare_fk_polynomials.py  comparison_instructions.txt  config.yaml  config2.yaml  config3.yaml  config4.yaml  config5.yaml  config6.yaml  config7.yaml  config8.yaml  config9.yaml  display_polynomial.py  fibered_table.json  fk.1  fk_segments_links  format_series.py  perf.data  process_fibered_knots.py  pull_fibered.py  pyproject.toml  temp.txt
fk-compute/.github/workflows/: docs.yaml
fk-compute/benchmark/: all_knots.yaml  benchmark.py  benchmark_results.csv  benchmark_results_backup.csv  res.csv  temp_ilp.csv  test_single.py  visualize_benchmark.py
fk-compute/benchmark/config_6/: config_10_105.yaml  config_10_106.yaml  config_10_110.yaml  config_10_112.yaml  config_10_116.yaml  config_10_124.yaml  config_10_127.yaml  config_10_132.yaml  config_10_133.yaml  config_10_143.yaml  config_10_145.yaml  config_10_153.yaml  config_10_154.yaml  config_10_155.yaml  config_10_156.yaml  config_10_159.yaml  config_10_161.yaml  config_10_2.yaml  config_10_29.yaml  config_10_41.yaml  config_10_43.yaml  config_10_45.yaml  config_10_47.yaml  config_10_62.yaml  config_10_69.yaml  config_10_70.yaml  config_10_71.yaml  config_10_73.yaml  config_10_78.yaml  config_10_82.yaml  config_10_88.yaml  config_10_89.yaml  config_10_91.yaml  config_10_99.yaml  config_11a_113.yaml  config_11a_121.yaml  config_11a_125.yaml  config_11a_126.yaml  config_11a_128.yaml  config_11a_14.yaml  (+579 more)
fk-compute/benchmark/data/: 10_100.json  10_100_ilp.csv  10_100_inversion.json  10_104.json  10_104_ilp.csv  10_104_inversion.json  10_105.json  10_105_ilp.csv  10_105_inversion.json  10_106.json  10_106_ilp.csv  10_106_inversion.json  10_107.json  10_107_ilp.csv  10_107_inversion.json  10_109.json  10_109_ilp.csv  10_109_inversion.json  10_110.json  10_110_ilp.csv  10_110_inversion.json  10_112.json  10_112_ilp.csv  10_112_inversion.json  10_115.json  10_115_ilp.csv  10_115_inversion.json  10_116.json  10_116_ilp.csv  10_116_inversion.json  10_118.json  10_118_ilp.csv  10_118_inversion.json  10_123.json  10_123_ilp.csv  10_123_inversion.json  10_124.json  10_124_ilp.csv  10_124_inversion.json  10_125.json  (+3698 more)
fk-compute/cpp/: 820_original_output.json  820_out.json  Makefile  MakefileT  README.md  bilvector_qbin  bilvector_qbin.cpp  bilvector_test.cpp  checkpoint_demo  checkpoint_demo.cpp  checkpoint_proposal.md  checkpoint_resume_demo  checkpoint_resume_demo.cpp  debug_fmpoly  example  example_polynomial.json  figure8_original_output.json  fk_checkpoint_1762193271_7791.json  fk_checkpoint_1762193271_7791.json_polynomial.json  fk_main  fk_segments_links  fk_segments_links.cpp  fmpoly_compatibility_test  fmpoly_example  fmpoly_example.json  instructions.md  inverse_qpochhammer_test  linalg.hpp  link_output.json  main.cpp  notes_umap.md  out.json  out2.json  out3.json  output_sequential.json  perf.data  perf.data.old  performance_comparison_test  polynomial_example  profiling_bmpoly.txt  (+24 more)
fk-compute/cpp/data/: 62_ilp.csv  820_ilp_long.csv  820_ilp_short.csv  820_ilp_true.json  821_ilp.csv  821_ilp_short.csv  821_ilp_short2.csv  942_ilp.csv  942_ilp_deg3.csv  942_ilp_deg4.csv  L4a1_ilp_deg10.csv  L4a1_ilp_deg2.csv  L4a1_ilp_deg3.csv  changes.csv  figure8_ilp.csv  figure8_ilp_short.csv  link_ilp.csv  pretzel_inversion.json  trefoil_other_ilp.csv
fk-compute/cpp/docs/: Makefile  README.md  conf.py  examples.rst  introduction.rst  requirements.txt
fk-compute/cpp/examples/: bilvector_operations.cpp  checkpoint_demo.cpp  fk_computation_test.cpp  fmpoly_example.cpp  polynomial_example.cpp  trefoil_complete_example.cpp  trefoil_demo.cpp  trefoil_fk_example.cpp
fk-compute/cpp_v2/: Makefile  fk_main  fmpoly_example  main.cpp  out.json  performance_comparison_test  random_fmpoly
fk-compute/data/: 11a_44.json  11a_44_inversion.json  11a_47.json  11a_47_ilp.csv  11a_47_inversion.json  12n_242.json  12n_242_deg_20.json  12n_242_deg_20_inversion.json  12n_242_ilp.csv  13n_1291.json  13n_1291_ilp.csv  13n_1320.json  13n_1320_ilp.csv  13n_1320_inversion.json  4_1_deg_10.json  4_1_deg_10_inversion.json  9_42_deg_10_inversion.json  9_42_inversion.json  Unknown_034022.json  Unknown_034022_inversion.json  Unknown_034229.json  Unknown_034229_inversion.json  Unknown_034447.json  Unknown_034447_inversion.json  Unknown_034517.json  Unknown_034517_inversion.json  Unknown_034651.json  Unknown_034651_inversion.json  Unknown_115135.json  Unknown_115135_ilp.csv  Unknown_115135_inversion.json  Unknown_123832.json  Unknown_123832_inversion.json  Unknown_141736.json  Unknown_141736_ilp.csv  Unknown_141736_inversion.json  Unknown_141741_inversion.json  Unknown_151406_inversion.json  Unknown_180415.json  Unknown_180415_ilp.csv  (+22 more)
fk-compute/docs/: README.md  constraint_system.md  development.md  ilp.md  installation.md  installation.rst  inversion.md  output.md  overview.md  quickstart.md  troubleshooting.md  troubleshooting.rst
fk-compute/results/: 10_105.json  10_107.json  10_110.json  10_115.json  10_125.json  10_126.json  10_127.json  10_132.json  10_133.json  10_137.json  10_140.json  10_141.json  10_143.json  10_145.json  10_148.json  10_149.json  10_150.json  10_151.json  10_153.json  10_154.json  10_155.json  10_156.json  10_157.json  10_158.json  10_159.json  10_160.json  10_161.json  10_163.json  10_60.json  10_69.json  10_73.json  10_75.json  10_78.json  10_81.json  10_89.json  10_96.json  8_20.json  8_21.json  9_42.json  9_45.json  (+1 more)
fk-compute/scripts/: sign_diagram_candidate_stats.py
fk-compute/tests/: all_links.yaml  bar_natan.py  call_homo.py  compare_fks.py  compute_fks.py  conftest.py  knotinfo.csv  temp.json  test_bar_natan.py  test_fk_baseline.py  test_inversion_search_order.py  test_label_crossings.py  test_perm_signs_knots.py  test_perm_signs_links.py  test_phase2_snapshots.py  test_sign_diagram_candidates.py  test_stratified.py
(+8301 files in other folders)
